[package]
name = "void_log"
version = "0.1.3"
edition = "2021"
description = "An fast log print"
license = "Apache-2.0"
license-file = "LICENSE"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
